--- a/onu-search-countries/package.json
+++ b/onu-search-countries/package.json
@@ -16,6 +16,8 @@
     "esbuild": "^0.14.14"
   },
   "devDependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.556.0",
+    "@aws-sdk/client-dynamodb": "^3.556.0",
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.4",
