--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,node,linux,windows,sam
 shared/**/*.zip 
+**/env.json
