--- a/onu-search-countries/package.json
+++ b/onu-search-countries/package.json
@@ -13,11 +13,12 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "esbuild": "^0.14.14"
   },
   "devDependencies": {
-    "@aws-sdk/lib-dynamodb": "^3.556.0",
     "@aws-sdk/client-dynamodb": "^3.556.0",
+    "@aws-sdk/lib-dynamodb": "^3.556.0",
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.4",
