--- a/template.yaml
+++ b/template.yaml
@@ -43,6 +43,13 @@ Resources:
         - x86_64
       Layers:
         - arn:aws:lambda:us-east-1:168687661563:layer:node18x-aws-sdk-3:1
+      Environment:
+        Variables:
+          AWS_LOCAL: !Ref OnuSearchCountriesFunction
+          AWS_LOCAL_REGION: !Ref OnuSearchCountriesFunction
+          AWS_LOCAL_ENDPOINT: !Ref OnuSearchCountriesFunction
+          AWS_LOCAL_SECRET_KEY_ID: !Ref OnuSearchCountriesFunction
+          AWS_LOCAL_SECRET_ACCESS_KEY: !Ref OnuSearchCountriesFunction
       Events:
         OnuSearchCountries:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
